--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>fem-home</title>
+    <title>ty-home</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
@@ -27,10 +27,11 @@
           <p>I got back in the game, starting with a review of HTML and CSS. I used the study guides from MDN and courses offered by Front End Masters.</p>
         </div>
       </section>
+      <div class="comment-div">
+        <a href="page/comment.html" id="comment">contact</a>
+      </div>
 
     </div>
-    <div class="comment-div">
-      <a href="page/comment.html" id="comment">contact</a>
-    </div>
+
   </body>
 </html>
