--- a/index.html
+++ b/index.html
@@ -9,22 +9,24 @@
   <body>
     <div class="wrapper">
       <header>
-        <img class="ty-photo" src="img/ty-profile-photo.png" alt="image of page author"/>
+        <img class="headerImg"  src="img/ty-profile-photo.png" alt="image of page author" />
         <h1>Ty Richardson</h1>
       </header>
       <nav>
         <ul>
           <li>home</li>
           <a href="page/cats.html"><li>cats</li></a>
+          <a href="page/dogs.html"><li>dogs</li></a>
           <a href="page/kids.html"><li>kids</li></a>
           <a href="page/outside.html"><li>outside</li></a>
         </ul>
       </nav>
       <section>
         <div class="index-div">
-          <p>This website demonstrates HTML and CSS competency.</p>
-          <p>I graduated Prime Digital Academy in June 2018 with a Full Stack Software Engineering certificate, but circumstances dictated that I spend time away from my Web Developer job search.</p>
-          <p>I got back in the game, starting with a review of HTML and CSS. I used the study guides from MDN and courses offered by Front End Masters.</p>
+          <p>This website demonstrates Front End Web Development competencies.</p>
+          <p>I graduated Prime Digital Academy in June 2018 with a Full Stack Software Engineering certificate, but circumstances dictated I spend time away from my Web Developer job search.</p>
+          <p>Now I'm back in the game.</p>
+          <p>To brush up, I used my projects from Prime, the study guides from MDN, and courses offered by Front End Masters.</p>
         </div>
       </section>
       <div class="comment-div">
@@ -32,6 +34,8 @@
       </div>
 
     </div>
-
+    <script src="https://unpkg.com/popmotion/dist/popmotion.global.min.js"></script>
+    <script src="https://unpkg.com/swiper/js/swiper.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
