--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <a href="page/dogs.html"><li>dogs</li></a>
           <a href="page/kids.html"><li>kids</li></a>
           <a href="page/outside.html"><li>outside</li></a>
+          <a href="page/calc.html"><li>calculator</li></a>
         </ul>
       </nav>
       <section>
@@ -36,6 +37,6 @@
     </div>
     <script src="https://unpkg.com/popmotion/dist/popmotion.global.min.js"></script>
     <script src="https://unpkg.com/swiper/js/swiper.js"></script>
-    <script src="./script.js"></script>
+    <script src="./script/script.js"></script>
   </body>
 </html>
