--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       </nav>
       <section>
         <div class="index-div">
-          <p>This website demonstrates Front End Web Development competencies.</p>
+          <p>This website demonstrates Front End Web Development competencies using HTML, CSS, and Javascript.</p>
           <p>I graduated Prime Digital Academy in June 2018 with a Full Stack Software Engineering certificate, but circumstances dictated I spend time away from my Web Developer job search.</p>
           <p>Now I'm back in the game.</p>
-          <p>To brush up, I used my projects from Prime, the study guides from MDN, and courses offered by Front End Masters.</p>
+          <p>To brush up, I reviewed notes and projects from my Prime experience, and the study guides from MDN and courses offered by Front End Masters.</p>
         </div>
       </section>
       <div class="comment-div">
