integrate mole game
integrated star-mole game into website

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <a href="page/kids.html"><li>kids</li></a>
           <a href="page/outside.html"><li>outside</li></a>
           <a href="page/calc.html"><li>calculator</li></a>
+          <a href="page/mole.html"><li>game</li></a>
         </ul>
       </nav>
       <section>
