beautiy code, touch up
ran Beautify to unify formatted across code pages; touched up alignments; added h1 to game page.

--- a/index.html
+++ b/index.html
@@ -1,43 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>ty-home</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <img class="headerImg"  src="img/ty-profile-photo.png" alt="image of page author" />
-        <h1>Ty Richardson</h1>
-      </header>
-      <nav>
-        <ul>
-          <li>home</li>
-          <a href="page/cats.html"><li>cats</li></a>
-          <a href="page/dogs.html"><li>dogs</li></a>
-          <a href="page/kids.html"><li>kids</li></a>
-          <a href="page/outside.html"><li>outside</li></a>
-          <a href="page/calc.html"><li>calculator</li></a>
-          <a href="page/mole.html"><li>game</li></a>
-        </ul>
-      </nav>
-      <section>
-        <div class="index-div">
-          <p>This website demonstrates Front End Web Development competencies using HTML, CSS, and Javascript.</p>
-          <p>I graduated Prime Digital Academy in June 2018 with a Full Stack Software Engineering certificate, but circumstances dictated I spend time away from my Web Developer job search.</p>
-          <p>Now I'm back in the game.</p>
-          <p>To brush up, I reviewed notes and projects from my Prime experience, and the study guides from MDN and courses offered by Front End Masters.</p>
-        </div>
-      </section>
-      <div class="comment-div">
-        <a href="page/comment.html" id="comment">contact</a>
-      </div>
 
+<head>
+  <title>ty-home</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="css/style.css" rel="stylesheet">
+</head>
+
+<body>
+  <div class="wrapper">
+    <header>
+      <img class="headerImg" src="img/ty-profile-photo.png" alt="image of page author" />
+      <h1>Ty Richardson</h1>
+    </header>
+    <nav>
+      <ul>
+        <li>home</li>
+        <a href="page/cats.html">
+          <li>cats</li>
+        </a>
+        <a href="page/dogs.html">
+          <li>dogs</li>
+        </a>
+        <a href="page/kids.html">
+          <li>kids</li>
+        </a>
+        <a href="page/outside.html">
+          <li>outside</li>
+        </a>
+        <a href="page/calc.html">
+          <li>calculator</li>
+        </a>
+        <a href="page/mole.html">
+          <li>game</li>
+        </a>
+      </ul>
+    </nav>
+
+    <div class="comment-div">
+      <a href="page/comment.html" id="comment">contact</a>
     </div>
-    <script src="https://unpkg.com/popmotion/dist/popmotion.global.min.js"></script>
-    <script src="https://unpkg.com/swiper/js/swiper.js"></script>
-    <script src="./script/script.js"></script>
-  </body>
+
+    <section>
+      <div class="index-div">
+        <p> Currently, this website demonstrates Front End Web Development competencies using HTML, CSS, and Vanilla
+          Javascript.</p>
+        <p>I graduated <em><a href="https://primeacademy.io/" target="_blank">Prime Digital Academy</a></em> in June
+          2018 with a Full Stack Software Engineering certificate, but circumstances dictated that I spend time away from my
+          Web Developer job search.</p>
+        <p>Now I'm back in the game -- like the header images here, you can pull me down but I bounce back!</p>
+        <p>To brush up, I've used <em><a href="https://developer.mozilla.org/en-US/docs/Learn" target="_blank"> guides
+              from MDN</a></em> and <em><a href="https://frontendmasters.com/bootcamp/" target="_blank">Frontend Masters
+              Bootcamp.</a></em></p>
+        <p>As I continue, I'll post resources I've used and projects I've completed.</p>
+      </div>
+    </section>
+
+    <div class="comment-div">
+      <h5>Site launched February 18, 2020</h5>
+    </div>
+
+
+  </div>
+  <script src="https://unpkg.com/popmotion/dist/popmotion.global.min.js"></script>
+  <script src="https://unpkg.com/swiper/js/swiper.js"></script>
+  <script src="./script/script.js"></script>
+</body>
+
 </html>
