testing touch up
tested and touched up

--- a/index.html
+++ b/index.html
@@ -42,25 +42,30 @@
       <a href="page/comment.html" id="comment">contact</a>
     </div>
 
-    <section>
+    <section class="index-div">
       <div class="index-div">
-        <p> Currently, this website demonstrates Front End Web Development competencies using HTML, CSS, and Vanilla
+        <p> Currently, this website demonstrates my Frontend Web Development skills using HTML, CSS, and Vanilla
           Javascript.</p>
         <p>I graduated <em><a href="https://primeacademy.io/" target="_blank">Prime Digital Academy</a></em> in June
-          2018 with a Full Stack Software Engineering certificate, but circumstances dictated that I spend time away from my
+          2018 with a Full Stack Software Engineering certificate, but life-circumstances demanded I spend time away
+          from my
           Web Developer job search.</p>
         <p>Now I'm back in the game -- like the header images here, you can pull me down but I bounce back!</p>
         <p>To brush up, I've used <em><a href="https://developer.mozilla.org/en-US/docs/Learn" target="_blank"> guides
               from MDN</a></em> and <em><a href="https://frontendmasters.com/bootcamp/" target="_blank">Frontend Masters
               Bootcamp.</a></em></p>
-        <p>As I continue, I'll post resources I've used and projects I've completed.</p>
+        <p>As I continue, I'll post more resources I've used and projects I've completed.</p>
       </div>
     </section>
 
-    <div class="comment-div">
-      <h5>Site launched February 18, 2020</h5>
+    <div class="date-div">
+      <div class="launch-date-div">
+        <h5>Site launched February 18, 2020</h5>
+      </div>
+      <div class="happened hidden">
+        <h5 class="happened-today"></h5>
+      </div>
     </div>
-
 
   </div>
   <script src="https://unpkg.com/popmotion/dist/popmotion.global.min.js"></script>
